HomePage Finish & Footer + Main Content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </figure>
             <section>
                 <h2>Welcome!</h2>
-                <p>I am Nicolas Steinhauser, a 22 year old guy from Austria. I came to Canada over a year ago to play for the Rocket League Varsity Team and have been studying ever since. </p>
+                <p>I am Nicolas Steinhauser, a 22 year old guy from Austria. I came to Canada over a year ago to play for the Rocket League Varsity Team and have been studying ever since. I have been enjoying Canada a lot so far. </p>
                 <p>The things i enjoy most in life is gaming hanging out with friends and doing sports. I used to play soccer for 8 years until i got injured and had to forcefully quit the sport. After that i digged deeper into videogames and became really good at Rocket League which led me to end up here in Canada under a scholarship</p>
             </section>
         </article>
