All Headers & Baselayout AboutYou

--- a/AboutYou/about.html
+++ b/AboutYou/about.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About You</title>
+
+    <link rel="stylesheet" href="../CSS/cssreset.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Nicolas Steinhauser</h1>
+        <p>Computer Programming | Student ID: 0877732</p>
+        <nav>
+            <a href="../index.html">Home</a>
+            <a href="../AboutYou/about.html">About You</a>
+            <a href="../FavouriteThings/favourites.html">Favourites Things</a>
+            <a href="../TravelPage/travel.html">Travel</a>
+        </nav>
+    </header>
+
+    <main>
+        <article>
+            <h2>Education</h2>
+            <figure>
+                <img
+            </figure>
+            <section>
+                <p></p>
+                <p></p>
+            </section>
+
+            <h2>Hometown</h2>
+            <figure>
+                <img
+            </figure>
+            <section>
+                <p></p>
+                <p></p>
+            </section>
+
+            <h2>Family</h2>
+            <figure>
+                <img
+            </figure>
+            <section>
+                <p></p>
+                <p></p>
+            </section>
+        </article>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Nicolas Steinhauser</p>
+    </footer>
 </body>
 </html>
