--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p>Computer Programming | Student ID: 0877732</p>
         <nav>
             <a href="index.html">Home</a>
-            <a href="AboutYou/">About You</a>
-            <a href="FavouriteThings/">Favourites Things</a>
+            <a href="AboutYou/about.html">About You</a>
+            <a href="FavouriteThings/favourites.html">Favourites Things</a>
             <a href="TravelPage/travel.html">Travel</a>
         </nav>
     </header>
