--- a/FavouriteThings/favourites.html
+++ b/FavouriteThings/favourites.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="../CSS/cssreset.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+
 </head>
 <body>
+    <header>
+        <h1>Nicolas Steinhauser</h1>
+        <p>Computer Programming | Student ID: 0877732</p>
+        <nav>
+            <a href="../index.html">Home</a>
+            <a href="../AboutYou/about.html">About You</a>
+            <a href="../FavouriteThings/favourites.html">Favourites Things</a>
+            <a href="../TravelPage/travel.html">Travel</a>
+        </nav>
+    </header>
     
 </body>
 </html>
