--- a/TravelPage/travel.html
+++ b/TravelPage/travel.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel Page</title>
+
+    <link rel="stylesheet" href="../CSS/cssreset.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+
 </head>
 <body>
+    <header>
+        <h1>Nicolas Steinhauser</h1>
+        <p>Computer Programming | Student ID: 0877732</p>
+        <nav>
+            <a href="../index.html">Home</a>
+            <a href="../AboutYou/about.html">About You</a>
+            <a href="../FavouriteThings/favourites.html">Favourites Things</a>
+            <a href="../TravelPage/travel.html">Travel</a>
+        </nav>
+    </header>
     
 </body>
 </html>
