--- a/AboutYou/about.html
+++ b/AboutYou/about.html
@@ -24,29 +24,33 @@
         <article>
             <h2>Education</h2>
             <figure>
-                <img
+                <img src="images/oldschool.jpg" alt="My old Highschool">
             </figure>
             <section>
-                <p></p>
-                <p></p>
+                <p>I started my education at Notre Dame de Sion, a small primary school located on Burggasse in Vienna. It was a friendly school where I learned the basics of reading, writing, and math, but also the importance of respect and cooperation. The teachers there were very kind and supportive, and they helped build a strong foundation for my later studies. I especially enjoyed art and English classes, which made me curious about other cultures and languages from a young age.</p>
+                <p>After finishing primary school, I attended GRG17 Geblergasse, a high school also in Vienna. The school was much bigger and more diverse, with many different subjects and activities to choose from. During my time there, I discovered that I was interested in technology and creative projects. I also made many good friends and learned how to work both independently and as part of a team. My years at GRG17 Geblergasse helped me grow more confident and prepared me for future studies and challenges.</p>
             </section>
+        </article>
 
+        <article>
             <h2>Hometown</h2>
             <figure>
-                <img
+                <img src="images/Vienna.jpg" alt="Vienna Skyline">
             </figure>
             <section>
-                <p></p>
-                <p></p>
+                <p>Vienna is the capital city of Austria and the place where I grew up. It’s a beautiful city that mixes old history with modern life. Everywhere you go, you can see amazing buildings like palaces, churches, and museums that show how important Vienna was in Europe’s past. The city is also known for its classical music, with famous composers like Mozart and Beethoven having lived and worked there. I’ve always loved walking through the city center, especially around Stephansplatz, where the streets are full of life and culture.</p>
+                <p>Even though Vienna is a big city, it still feels calm and organized. The public transport is clean and easy to use, and there are parks and green spaces almost everywhere. My favorite place to relax is the Prater park, where you can ride the giant Ferris wheel and see the city from above. Vienna also has great cafés, where people meet to drink coffee and talk — something that’s a big part of local culture. Living there taught me to appreciate art, music, and good food, and it will always feel like home to me.</p>
             </section>
+        </article>
 
+        <article>
             <h2>Family</h2>
             <figure>
-                <img
+                <img src="images/Familie.jpg" alt="My Family">
             </figure>
             <section>
-                <p></p>
-                <p></p>
+                <p>My family has always been very supportive and close. I grew up in a home where we enjoy spending time together, whether it’s sharing meals, watching movies, or going on small trips. My parents have always encouraged me to stay curious and work hard, and they’ve taught me to be respectful and responsible. Even when life gets busy, we always make time for each other.</p>
+                <p>Most of my relatives live nearby in Vienna, so we often meet for birthdays or holidays. Those gatherings are full of laughter and good food, and they remind me how lucky I am to have them. My family gives me a sense of comfort and stability, and I know I can always count on their support.</p>
             </section>
         </article>
     </main>
