--- a/FavouriteThings/favourites.html
+++ b/FavouriteThings/favourites.html
@@ -20,6 +20,39 @@
             <a href="../TravelPage/travel.html">Travel</a>
         </nav>
     </header>
-    
+    <main>
+        <article>
+            <h2>My Favourite Videogames</h2>
+            <ol>
+                <li><a href="https://en.wikipedia.org/wiki/Rocket_League">Rocket League</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Minecraft">Minecraft</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Dark_Souls_III">Dark Souls III</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Elden_Ring">Elden Ring</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Clair_Obscur:_Expedition_33">Clair Obscur: Expedition 33</a></li>
+            </ol>
+        </article>
+        <article>
+            <h2>My Favourite Animals</h2>
+            <ol>
+                <li><a href="https://en.wikipedia.org/wiki/Red_panda">Red Panda</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Otter">Otter</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Cat">Cat</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Capybara">Capybara</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Flying_squirrel">Flying Squirrel</a></li>
+            </ol>
+
+        </article>
+        <article>
+            <h2>My Favourite Artists</h2>
+            <ol>
+                <li><a href="https://en.wikipedia.org/wiki/Juice_Wrld">Juice Wrld</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/SZA">SZA</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/NLE_Choppa">NLE Choppa</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Travis_Scott">Travis Scott</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Billie_Eilish">Billie Eilish</a></li>
+            </ol>
+
+        </article>
+    </main>
 </body>
 </html>
