Travel Page & Font Embedded

--- a/TravelPage/travel.html
+++ b/TravelPage/travel.html
@@ -20,6 +20,36 @@
             <a href="../TravelPage/travel.html">Travel</a>
         </nav>
     </header>
-    
+    <main>
+        <article>
+        <h2>Barcelona</h2>
+
+        <p>Barcelona is a beautiful city on the coast of Spain, known for its unique architecture, sunny weather, and lively culture. It’s a place where you can walk from the beach to the mountains in the same day and enjoy great food everywhere you go. The city is famous for the works of Antoni Gaudí, especially the Sagrada Família and Park Güell, which make it feel like an open-air art museum. The mix of modern life and old history gives Barcelona a very special atmosphere that attracts people from all over the world.</p>
+        <p>I’ve always wanted to visit Barcelona because it feels full of energy and creativity. I love the idea of exploring its colorful streets, trying traditional tapas, and relaxing by the sea. I also have friends who have been there and told me how welcoming and vibrant the city is. Visiting Barcelona would be a chance to experience a new culture, hear a new language, and see a different way of life — something I’ve always found inspiring.</p>
+
+        <figure>
+        <img src="images/Barcelona1.jpg" alt="Sagrada de Familia">
+        <figcaption>Source: <a href="https://www.ricksteves.com/watch-read-listen/read/articles/barcelona-vibrant-and-spirited">Sagrada de Familia</a></figcaption>
+        </figure>
+
+
+        <figure>
+        <img src="images/Barcelona2.jpg" alt="Park de Guell">
+        <figcaption>Source: <a href="https://www.klook.com/destination/c108-barcelona/">Park de Guell</a>
+        </figcaption>
+        </figure>
+
+
+        <figure>
+        <img src="images/Barcelona3.jpg" alt="Barcelona Beach">
+        <figcaption>Source: <a href="https://www.tripadvisor.ca/Attractions-g1969684-Activities-Province_of_Barcelona_Catalonia.html">Barcelona Beach</a>
+        </figcaption>
+        </figure>
+        </article>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Nicolas Steinhauser</p>
+    </footer>
 </body>
 </html>
